<resources>
    <string name="app_name">BeLuxe</string>
    <string name="access_id">Access ID</string>
    <string name="password">Password</string>
    <string name="login_btn">login</string>
    <string name="no_account_btn">Don’t have an account? <b><u>Sign In</u></b></string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="signup_btn">sign up</string>
    <string name="have_account_btn">Already have an account? <b><u>Login</u></b></string>
    <string name="welcome_message">Welcome to <b>BeLuxe!</b> Secure your account with</string>
    <string name="user_id">m4r8p2</string>
    <string name="continue_btn">continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username">Jessica Angelina</string>
    <string name="content_desc_profile_image">profile_image</string>
    <string name="content_desc_burger_icon">burger_icon</string>
    <string name="total_profit_title">Total Profit</string>
    <string name="date">22/12/2023</string>
    <string name="total_profit">Rp. 1.500.000.000</string>
    <string name="total_order_title">Total Order</string>
    <string name="total_order">1.789</string>
    <string name="total_buying_title">Total Buying</string>
    <string name="total_buying">1.288</string>
    <string name="on_going_orders">On-going Orders</string>
    <string name="see_all"><u>See All</u></string>
    <string name="order_number">#1790</string>
    <string name="content_desc_chevron_icon">chevron icon</string>
    <string name="quantity">2</string>
    <string name="product_name_1">Ethereal Blossom Blush</string>
    <string name="product_name_2">Mystic Mirage Cushion</string>
    <string name="see_details">See Details</string>
    <string name="finish_order_btn">finish order</string>
    <string name="top_products">Top Products</string>
    <string name="content_desc_product_image">product image</string>
    <string name="order_history">Order History</string>
    <string name="order_number_title">Order\nNumber</string>
    <string name="recipient_name_title">Recipient Name</string>
    <string name="order_status_title">Order\nStatus</string>
    <string name="payment_status_title">Payment\nStatus</string>
    <string name="order_status_finished">finished</string>
    <string name="payment_status_paid">paid</string>
    <string name="recipient_name">Bryan Nathaniel</string>
    <string name="order_details">Order Details</string>
    <string name="content_desc_back_icon">back icon</string>
    <string name="content_desc_edit_icon">edit icon</string>
    <string name="time_title">Time</string>
    <string name="time_text">16:53 PM</string>
    <string name="date_title">Date</string>
    <string name="date_text">1/1/2024</string>
    <string name="cashier_name_title">Cashier Name</string>
    <string name="content_desc_purchased_image">purchased image</string>
    <string name="content_desc_line_image">line image</string>
    <string name="qty">2</string>
    <string name="product_price">Rp. 129.000</string>
    <string name="total_product_price">Rp. 258.000</string>
    <string name="subtotal_title">Subtotal</string>
    <string name="subtotal">Rp. 516.000</string>
    <string name="tax_title">Tax (10%)</string>
    <string name="tax">Rp. 51.600</string>
    <string name="grand_total_title">Grand Total</string>
    <string name="grand_total">Rp. 567.600</string>
    <string name="payment_method_title">Payment Method</string>
    <string name="payment_method_cash">Cash</string>
    <string name="cash_title">Cash</string>
    <string name="cash">Rp. 600.000</string>
    <string name="change_title">Change</string>
    <string name="change">Rp. 32.400</string>
    <string name="finished_order_btn">finished order</string>
    <string name="delete_order_btn">delete order</string>
    <string name="save_update_btn">save update</string>
    <string name="buying_history">Buying History</string>
    <string name="purchase_number_title">Purchase\nNumber</string>
    <string name="purchased_date_title">Purchased\nDate</string>
    <string name="purchased_date">12/12/2023</string>
    <string name="quantity_title">Qty</string>
    <string name="shipping_status_title">Shipping\nStatus</string>
    <string name="purchase_number">#1288</string>
    <string name="quantity_buying">10.000</string>
    <string name="shipping_status_arrived">arrived</string>
    <string name="content_desc_plus_icon">plus icon</string>
    <string name="buying_items">Buying Items</string>
    <string name="company_name">PT. Gemilang Indah Prima</string>
    <string name="buying_details">Buying Details</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="total_price_buying">Rp. 1.290.000.000</string>
    <string name="subtotal_buying">Rp. 1.290.000.000</string>
    <string name="tax_buying">Rp. 129.000.000</string>
    <string name="grand_total_buying">Rp. 1.419.000.000</string>
    <string name="cash_buying">Rp. 1.500.000.000</string>
    <string name="change_buying">Rp. 81.000.000</string>
    <string name="finish_payment_btn">finish payment</string>
    <string name="finish_buying_btn">finished buying</string>
    <string name="delete_buying_btn">delete buying</string>
    <string name="product_list">Product List</string>
    <string name="total_sold_products">1.765</string>
    <string name="add_new_products">Add New Product</string>
    <string name="product_image_title">Product Image</string>
    <string name="product_name_title">Product Name</string>
    <string name="product_supplier_title">Product Supplier</string>
    <string name="supplier_price_title">Supplier Price</string>
    <string name="product_price_title">Product Price</string>
    <string name="product_name_placeholder">Type Product Name</string>
    <string name="product_supplier_placeholder">Type Product Supplier</string>
    <string name="supplier_price_placeholder">Type Supplier Price</string>
    <string name="product_price_placeholder">Type Product Price</string>
    <string name="add_btn">add</string>
    <string name="product_details">Product Details</string>
    <string name="supplier_price">Rp. 98.000</string>
    <string name="save_btn">save</string>
    <string name="delete_btn">delete</string>
    <string name="cashier">Cashier</string>
    <string name="profile">Profile</string>
    <string name="credentials_title">Credentials</string>
    <string name="credentials">Manager</string>
    <string name="user_email">angelina.jessica25@gmail.com</string>
    <string name="update_btn">update</string>
    <string name="addCashierBtn">Button Cashier</string>
    <string name="checkout_button_description">Checkout Button</string>

</resources>