<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="@string/content_desc_burger_icon"
    tools:context=".OrderDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/header_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIconImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/content_desc_back_icon"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/orderDetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="102dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/burgerIconImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:contentDescription="@string/content_desc_burger_icon"
            android:src="@drawable/header_burger" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderNumberText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/order_number"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderDetailsText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/order_details"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/editIconImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_edit_icon"
                    android:src="@drawable/icon_edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipientNameTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/recipient_name_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/recipientNameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/recipient_name"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timeTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/time_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/time_text"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/date_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/date_text"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cashierNameTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/cashier_name_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cashierNameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/username"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPurchased"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/card_purchased_design"
                tools:itemCount="2"
                android:layout_marginTop="16dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/lineIconImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/icon_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subtotalTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/subtotal_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/subtotalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/subtotal"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/taxTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/tax_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/taxText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tax"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/grandTotalTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/grand_total_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/grandTotalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/grand_total"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/lineIconImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/icon_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/paymentMethodTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/payment_method_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/paymentMethodText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/payment_method_cash"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cashTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/cash_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cashText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/cash"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/changeTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/change_title"
                    android:textColor="@color/red_transparent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/changeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/change"
                    android:textAlignment="textEnd"
                    android:textColor="@color/red"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/finishOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/finish_order_btn"
                    app:backgroundTint="@color/red"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/deleteOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_secondary_background"
                    android:text="@string/delete_order_btn"
                    app:backgroundTint="@color/red"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>