<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/header_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIconImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/content_desc_back_icon"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/updateProfileHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="130dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/updateProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_image_circle"
                android:src="@drawable/header_profile_big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accessIDTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/access_id"
                android:textColor="@color/red_transparent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/acccessIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/user_id"
                android:textAlignment="textEnd"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/credentialsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/credentials_title"
                android:textColor="@color/red_transparent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/credentialsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/credentials"
                android:textAlignment="textEnd"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fullNameTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/full_name"
                android:textColor="@color/red_transparent"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editFullName"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:background="@drawable/border_outlined"
                android:padding="16dp"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/username"
                android:textAlignment="textEnd"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/email"
                android:textColor="@color/red_transparent"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="46dp"
                android:background="@drawable/border_outlined"
                android:padding="16dp"
                android:fontFamily="@font/poppins_semi"
                android:text="@string/user_email"
                android:textAlignment="textEnd"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveUpdateProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/save_btn"
                app:backgroundTint="@color/red"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>